#1941 Updated tutorial config

--- a/tutorial/practicals/LFRic/distributed_memory/2_annexed_dofs/psyclone.cfg
+++ b/tutorial/practicals/LFRic/distributed_memory/2_annexed_dofs/psyclone.cfg
@@ -67,6 +67,21 @@ supported_fortran_datatypes = real, integer, logical
 # Specify default kind (precision) for the supported LFRic data types
 default_kind = real: r_def, integer: i_def, logical: l_def
 
+# Specify number of bytes for the supported LFRic data types
+precision_map = i_def: 4,
+                l_def: 1,
+                r_def: 8,
+                r_double: 8,
+                r_ncdf: 8,
+                r_quad: 16,
+                r_second: 8,
+                r_single: 4,
+                r_solver: 4,
+                r_tran: 8,
+                r_bl: 8,
+                r_phys: 8,
+                r_um: 8
+
 # Specify whether we generate code to perform runtime correctness checks
 RUN_TIME_CHECKS = false
 
