--- a/tutorial/practicals/LFRic/distributed_memory/2_annexed_dofs/psyclone.cfg
+++ b/tutorial/practicals/LFRic/distributed_memory/2_annexed_dofs/psyclone.cfg
@@ -34,7 +34,7 @@
 # Author: A. R. Porter, STFC Daresbury Laboratory
 # Modified by: R. W. Ford, STFC Daresbury Laboratory
 #              J. Henrichs, Bureau of Meteorology,
-#              I. Kavcic, Met Office
+#              I. Kavcic and O. Brunt, Met Office
 
 # This is the PSyclone configuration file.
 
