--- a/tutorial/practicals/LFRic/single_node/1_openmp/psyclone.cfg
+++ b/tutorial/practicals/LFRic/single_node/1_openmp/psyclone.cfg
@@ -34,7 +34,7 @@
 # Author: A. R. Porter, STFC Daresbury Laboratory
 # Modified by: R. W. Ford, STFC Daresbury Laboratory
 #              J. Henrichs, Bureau of Meteorology,
-#              I. Kavcic, Met Office
+#              I. Kavcic and O. Brunt, Met Office
 
 # This is the PSyclone configuration file.
 
@@ -81,7 +81,7 @@ precision_map = i_def: 4,
                 r_bl: 8,
                 r_phys: 8,
                 r_um: 8
-                
+
 # Specify whether we generate code to perform runtime correctness checks
 RUN_TIME_CHECKS = false
 
